# FallGuard

./: .gitignore  AGENTS.md  README.md  ash_optical_flow.py  environment.yml  pyproject.toml  requirements.txt
app/: __init__.py  streamlit_app.py
app/pages/: 1_录像回放.py
configs/: annotation_overrides.yaml  inference.yaml
configs/data/: le2i.yaml
configs/mmaction/: stgcn_le2i.py
data/samples/: README.md
datasets/: README.md
docs/: auto-senior-care-system-guide.md  auto-senior-care-system-strict-evaluation.md  legacy-baseline.md
docs/superpowers/plans/: 2026-06-23-fallguard-fixed-navigation-redesign.md
docs/superpowers/specs/: 2026-06-23-fallguard-fixed-navigation-redesign.md
notebooks/: 01_train_stgcn_cloud.ipynb
scripts/: build_autodl_notebook.py
src/fallguard/: __init__.py  cli.py  config.py  pipeline.py  types.py
src/fallguard/data/: manifest.py  pose_cache.py  preprocessing.py  windows.py
st-gcn/: Le2i_flow_train.ipynb  Le2i_flow_train_test.ipynb  Le2i_train.ipynb  Le2i_train_test.ipynb  Le2i_train_test_v2.ipynb  eval.py  lecture_24_inf.avi  main.ipynb  stgcn_results.ipynb  train_utils.py  utils.py
st-gcn/model/: sgcn.py  st_graph.py  stgcn.py  tgcn.py
tests/: test_cli.py  test_data_config.py  test_data_pipeline.py  test_evaluate.py  test_event_state.py  test_history.py  test_manifest.py  test_mmaction_export.py  test_mmaction_metric.py  test_mmaction_runner.py  test_notebook.py  test_official_stgcn_parity.py  test_pipeline.py  test_pose_buffer.py  test_pose_cache.py  test_pose_features.py  test_pose_selection.py  test_preprocessing.py  test_reporting.py  test_runtime_bundle.py  test_state_estimator.py  test_stgcn.py  test_streamlit_app_helpers.py  test_timeline.py  test_tk_app.py  test_types.py  test_video_processor.py  test_windows.py  test_worker.py  test_yolo_pose_device.py
(+294 files in other folders)
