[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fallguard"
version = "0.1.0"
description = "Pose-based fall detection course demo with YOLO-Pose and Streamlit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "opencv-python",
    "streamlit",
    "ultralytics",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
