[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fallguard"
version = "0.1.0"
description = "YOLOPose and ST-GCN video fall detection"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=1.26,<3",
  "opencv-python>=4.8,<5",
  "Pillow>=10,<13",
  "PyYAML>=6,<7",
  "torch>=2.1",
  "ultralytics>=8.4,<9",
]

[project.optional-dependencies]
train = [
  "jupyter>=1,<2",
  "matplotlib>=3.8,<4",
  "future>=1,<2",
  "importlib-metadata>=7,<10",
  "mmcv-lite==2.1.0",
  "mmengine>=0.7.1,<1.0.0",
  "pandas>=2.1,<3",
  "scikit-learn>=1.3,<2",
  "tensorboard>=2.15,<3",
]
dev = [
  "mypy>=1.10,<2",
  "nbval>=0.11,<1",
  "pytest>=8,<10",
  "ruff>=0.6,<1",
  "types-PyYAML>=6,<7",
]

[project.scripts]
fallguard = "fallguard.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --basetemp=.pytest_tmp -p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
packages = ["fallguard"]
ignore_missing_imports = true
strict = true
